wwr/styles/rafting.css
:root {
    --primary-color: rgba(5, 90, 5, 1.000);
    /* forest green */
    --secondary-color: rgba(255, 255, 255, 0.8);
    /* warm sand background */
    --accent1-color: rgba(0, 38, 77, 1.000);
    /* solid dark blue */
    --accent1-overlay: rgba(0, 38, 77, 0.60);
    /* semi-transparent dark */
    --accent2-color: rgba(241, 210, 136, 1.000);
    /* dark golden brown */
    --accent3-color: rgba(255, 255, 255, 1.000);
    /* white */
    --accent4-color: rgba(62, 62, 62, 1.000);
    /* black laquer */
    --accent5-color: rgba(173, 216, 230, 1.000);
    --heading-font: "Times New Roman", "Georgia", serif;
    --body-font: Arial, Helvetica, sans-serif;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: var(--body-font);
    color: var(--accent1-color);
    /* solid dark blue tex */
}

header,
main,
footer {
    width: 840px;
    margin: 0 auto;
}

header img {
    width: 180px;
    height: auto;
}

/* header img change added february 6 2026 */

h1,
h2 {
    font-family: var(--heading-font);
    color: var(--primary-color);
}

nav,
p,
section,
article {
    margin: 16px;
    padding: 8px;
}

img {
    width: 100%;
}

.hero {
    position: relative;
}

.hero article {
    position: absolute;
    bottom: 1.25rem;
    right: 20px;
    background-color: var(--secondary-color);
    padding: 1rem;
    max-width: 500px;
}

.hero article img {
    float: right;
    width: 7.8125rem;
}

.history {
    display: grid;
    grid-template-columns: 2fr 1fr 2fr;
    /* make the text twice width of the image */
    /* make the text to be at both sides of image */
    gap: 1rem;
}

.history h2,
.adventures h2 {
    grid-column: 1/-1;
    text-align: center;
    background-color: var(--accent2-color);
    padding: 1rem;
}

.adventures {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    gap: 1rem;
    text-align: center;
}

.hero h1 {
    position: absolute;
    top: 1.25rem;
    left: 0;
    width: 100%;
    padding: 1rem;
    text-align: center;
    background-color: var(--accent1-overlay);
    color: var(--accent3-color);
    /*check if the color selected gives enough contrast*/
}

header {
    display: grid;
    grid-template-columns: 150px auto;
    align-items: center;
    gap: 1rem;
    background-color: var(--primary-color);

}

/* header change added february 6 2026 */

nav {
    display: flex;
    justify-content: center;
    width: 100%;
}

/* nav a change added february 6 2026 */

nav ul {
    display: flex;
    width: 80%;
    list-style-type: none;
    justify-content: space-around;
    align-items: center;

}

/* nav ul change added february 6 2026 */

nav a {
    text-decoration: none;
    color: var(--accent3-color);
    font: var(--heading-font);
    font-size: 1rem;
    font-weight: 500;
}

/* nav a change added february 6 2026 */
nav a:hover {
    color: var(--accent1-color);
    background-color: var(--accent3-color);
}

/* nav a:hover change added february 6 2026 */

footer {
    background-color: var(--accent4-color);
    color: var(--accent3-color);
    display: grid;
    grid-template-columns: 1fr auto;
    gap: 1rem;
    align-items: center;
}

footer p {
    color: var(--accent3-color);
    font-weight: 600;
}

footer nav img {
    width: 32px;
    height: auto;
    margin-right: 1rem;
}

.socialmedia,
.socialmedia a {
    text-decoration: none;
    padding: 0;
}

.socialmedia a:hover {
    background-color: unset;
    color: var(--accent5-color);
}

/* socialmedia a:hover change added february 6 2026 */
/* when this is applied the bc color does not change when hover

